# APEX

./: .dockerignore  .gitignore  .gitmodules  ARTIFACT.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: artifact.yml  build.yml  docker.yml
artifacts/: docker-compose.yml  metadata.toml  run.sh
artifacts/plot/: carry_propagation.py  hq.py  keyword_wildcards.py  parse_results.py  plot_all.py  precision_latency.py  requirements.txt  tpch.py
artifacts/scripts/: run_comparison.sh  run_hybrid.sh  run_lazy_carry.sh  run_pattern.sh  run_storage.sh  run_tpch.sh
benchmark/: CMakeLists.txt  ciphertext-size.cpp  comparison.cpp  hybrid_queries.cpp  lazy_carry.cpp  pattern_match.cpp  tpch.cpp
examples/: CMakeLists.txt  carry-prop.cpp  rahc.cpp
include/: apex-fwd.h  apexcontext.h  apexparams.h  libapex.h  poly-evaluation.h  poly-interpolate.h  ring-params.h  utils.h
include/base/: psr-ciphertext.h  psr-encoder.h  psr-plaintext.h  psr.h  seg-range.h
include/coeffs/: carryeval-coeffs.h  coeffs-fwd.h  coeffs.h  coeffsbase.h  coeffsfactory.h  compeval-coeffs.h  zeroeval-coeffs.h
include/radix/: radix-ciphertext.h  radix-encoder.h  radix-fwd.h  radix-plaintext.h  radix.h
include/string/: string-ciphertext.h  string-encoder.h  string-fwd.h  string-pattern.h  string-plaintext.h  string-token.h
src/: CMakeLists.txt  apexcontext.cpp  poly-evaluation.cpp  poly-interpolate.cpp
src/coeffs/: coeffsfactory.cpp
src/radix/: radix-ciphertext.cpp  radix-encoder.cpp  radix-op.cpp  radix-plaintext.cpp
src/string/: string-encoder.cpp  string-op.cpp  string-plaintext.cpp
tests/: CMakeLists.txt  string.cpp
