if (APEX_BUILD_BENCHMARKS)
  file(GLOB_RECURSE BENCHMARK_SRC_FILES CONFIGURE_DEPENDS *.cpp)
  foreach(benchmark ${BENCHMARK_SRC_FILES})
    get_filename_component(exe ${benchmark} NAME_WE)
    add_executable(${exe} ${benchmark})
    set_property(TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmark)
    target_link_libraries(${exe} apex)
  endforeach()
endif()
