if (APEX_BUILD_EXAMPLES)
  file(GLOB_RECURSE EXAMPLE_SRC_FILES CONFIGURE_DEPENDS *.cpp)
  foreach(example ${EXAMPLE_SRC_FILES})
    get_filename_component(exe ${example} NAME_WE)
    add_executable(${exe} ${example})
    set_property(TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/examples)
    target_link_libraries(${exe} apex)
  endforeach()
endif()
