if (APEX_BUILD_TESTS)
  file(GLOB_RECURSE TEST_SRC_FILES CONFIGURE_DEPENDS *.cpp)
  foreach(test ${TEST_SRC_FILES})
    get_filename_component(exe ${test} NAME_WE)
    add_executable(${exe} ${test})
    set_property(TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
    target_link_libraries(${exe} apex)
  endforeach()
endif()
